--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,4 @@
 {
-
     "name": "App Glosir Sembako",
     "short_name": "Glosir Sembako",
     "description": "Membuat Aplikasi Glosir Sembako dengan javascript dan PWA",
@@ -10,9 +9,9 @@
             "type": "image/png"
         },
         {
-            "src": "assets/images/Glosir1.jpg",
+            "src": "assets/images/Glosir.png",
             "sizes": "192x192",
-            "type": "image/jpg"
+            "type": "image/png"
         }
     ],
     "start_url": "/",
