--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,9 @@
             "type": "image/png"
         },
         {
-            "src": "assets/images/Glosir1.jpg",
+            "src": "assets/images/Glosir.png",
             "sizes": "192x192",
-            "type": "image/jpg"
+            "type": "image/png"
         }
     ],
     "start_url": "/",
