--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
             "type": "image/png"
         },
         {
-            "src": "assets/images/Glosir.png",
+            "src": "assets/images/Glosir2.png",
             "sizes": "192x192",
             "type": "image/png"
         }
